--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@types/node": "18.15.10",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "clsx": "^2.1.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.13",
     "next": "13.4.13",
     "prisma": "^4.14.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^2.5.2",
     "ts-node": "^10.9.1",
     "typescript": "5.1.6"
   },
